使用 sinon.spy 確認物件裡頭的 method  有被執行過

--- a/lib/subscriptions/package.json
+++ b/lib/subscriptions/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "moment": "^2.15.2",
     "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "sinon": "^1.17.6"
   }
 }
