--- a/lib/subscriptions/package.json
+++ b/lib/subscriptions/package.json
@@ -10,6 +10,7 @@
   "author": "Alan Jui",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.1.2",
     "moment": "^2.15.2",
     "underscore": "^1.8.3"
   },
